syntax = "proto3";
package kardiachain.types;

option go_package = "github.com/kardiachain/go-kardia/proto/kardiachain/types";

import "gogoproto/gogo.proto";


message ValidatorSet {
    repeated Validator validators         = 1;
    Validator          proposer           = 2;
    int64             total_voting_power = 3;
}


message Validator {
    bytes                       address           = 1;
    int64                      voting_power      = 3;
    int64                       proposer_priority = 4;
}


message SimpleValidator {
    bytes                       address           = 1;
    int64                      voting_power      = 3;
}